// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Image prop "accessibilityLabel" 1`] = `
<div
  aria-label="accessibilityLabel"
  class="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
>
  <img
    alt="accessibilityLabel"
    class="css-image-1mi6z7k r-objectFit-1t7uo4s"
    draggable="false"
    src="https://google.com/favicon.ico"
  />
</div>
`;

exports[`components/Image prop "blurRadius" 1`] = `
<div
  class="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
>
  <img
    alt=""
    class="css-image-1mi6z7k r-objectFit-1t7uo4s"
    draggable="false"
    src="https://google.com/favicon.ico"
    style="filter: blur(5px);"
  />
</div>
`;

exports[`components/Image prop "defaultSource" does not override "height" and "width" styles 1`] = `
<div
  class="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
  style="height: 20px; width: 40px;"
>
  <img
    alt=""
    class="css-image-1mi6z7k r-objectFit-1t7uo4s"
    draggable="false"
    src="https://google.com/favicon.ico"
    style="height: 20px; width: 40px;"
  />
</div>
`;

exports[`components/Image prop "defaultSource" sets "height" and "width" styles if missing 1`] = `
<div
  class="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
  style="height: 10px; width: 20px;"
>
  <img
    alt=""
    class="css-image-1mi6z7k r-objectFit-1t7uo4s"
    draggable="false"
    src="https://google.com/favicon.ico"
  />
</div>
`;

exports[`components/Image prop "defaultSource" sets background image when value is a string 1`] = `
<div
  class="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
>
  <img
    alt=""
    class="css-image-1mi6z7k r-objectFit-1t7uo4s"
    draggable="false"
    src="https://google.com/favicon.ico"
  />
</div>
`;

exports[`components/Image prop "defaultSource" sets background image when value is an object 1`] = `
<div
  class="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
>
  <img
    alt=""
    class="css-image-1mi6z7k r-objectFit-1t7uo4s"
    draggable="false"
    src="https://google.com/favicon.ico"
  />
</div>
`;

exports[`components/Image prop "draggable" 1`] = `
<div
  class="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
>
  <img
    alt=""
    class="css-image-1mi6z7k r-objectFit-1t7uo4s"
    draggable="true"
    src="https://google.com/favicon.ico"
  />
</div>
`;

exports[`components/Image prop "focusable" 1`] = `
<div
  class="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
  tabindex="0"
/>
`;

exports[`components/Image prop "nativeID" 1`] = `
<div
  class="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
  id="nativeID"
/>
`;

exports[`components/Image prop "resizeMode" value "contain" 1`] = `
<div
  class="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
/>
`;

exports[`components/Image prop "resizeMode" value "cover" 1`] = `
<div
  class="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
/>
`;

exports[`components/Image prop "resizeMode" value "none" 1`] = `
<div
  class="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
/>
`;

exports[`components/Image prop "resizeMode" value "repeat" 1`] = `
<div
  class="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
/>
`;

exports[`components/Image prop "resizeMode" value "stretch" 1`] = `
<div
  class="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
/>
`;

exports[`components/Image prop "resizeMode" value "undefined" 1`] = `
<div
  class="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
/>
`;

exports[`components/Image prop "source" is correctly updated only when loaded if defaultSource provided 1`] = `
<div
  class="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
>
  <img
    alt=""
    class="css-image-1mi6z7k r-objectFit-1t7uo4s"
    draggable="false"
    src="https://testing.com/preview.jpg"
  />
</div>
`;

exports[`components/Image prop "source" is correctly updated only when loaded if defaultSource provided 2`] = `
<div
  class="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
>
  <img
    alt=""
    class="css-image-1mi6z7k r-objectFit-1t7uo4s"
    draggable="false"
    src="https://testing.com/fullSize.jpg"
  />
</div>
`;

exports[`components/Image prop "source" is correctly updated when missing in initial render 1`] = `
<div
  class="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
>
  <img
    alt=""
    class="css-image-1mi6z7k r-objectFit-1t7uo4s"
    draggable="false"
    src="https://testing.com/img.jpg"
  />
</div>
`;

exports[`components/Image prop "source" is not set immediately if the image has not already been loaded 1`] = `
<div
  class="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
>
  <img
    alt=""
    class="css-image-1mi6z7k r-objectFit-1t7uo4s"
    draggable="false"
    src="https://google.com/favicon.ico"
  />
</div>
`;

exports[`components/Image prop "source" is set immediately if the image has already been loaded 1`] = `
<div
  class="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
>
  <img
    alt=""
    class="css-image-1mi6z7k r-objectFit-1t7uo4s"
    draggable="false"
    src="https://google.com/favicon.ico"
  />
</div>
`;

exports[`components/Image prop "source" is set immediately if the image has already been loaded 2`] = `
<div
  class="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
>
  <img
    alt=""
    class="css-image-1mi6z7k r-objectFit-1t7uo4s"
    draggable="false"
    src="https://twitter.com/favicon.ico"
  />
</div>
`;

exports[`components/Image prop "source" is set immediately if the image was preloaded 1`] = `
<div
  class="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
>
  <img
    alt=""
    class="css-image-1mi6z7k r-objectFit-1t7uo4s"
    draggable="false"
    src="https://yahoo.com/favicon.ico"
  />
</div>
`;

exports[`components/Image prop "style" removes other unsupported View styles 1`] = `
<div
  class="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
>
  <svg
    style="position: absolute; height: 0px; visibility: hidden; width: 0px;"
  >
    <defs>
      <filter
        id="tint-56"
      >
        <feflood
          flood-color="blue"
        />
        <fecomposite
          in2="SourceAlpha"
          operator="atop"
        />
      </filter>
    </defs>
  </svg>
</div>
`;

exports[`components/Image prop "style" supports "resizeMode" property 1`] = `
<div
  class="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
/>
`;

exports[`components/Image prop "style" supports "shadow" properties (convert to filter) 1`] = `
<div
  class="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
/>
`;

exports[`components/Image prop "style" supports "tintcolor" property (convert to filter) 1`] = `
<div
  class="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
>
  <img
    alt=""
    class="css-image-1mi6z7k r-objectFit-1t7uo4s"
    draggable="false"
    src="https://google.com/favicon.ico"
    style="filter: url(#tint-55);"
  />
  <svg
    style="position: absolute; height: 0px; visibility: hidden; width: 0px;"
  >
    <defs>
      <filter
        id="tint-55"
      >
        <feflood
          flood-color="red"
        />
        <fecomposite
          in2="SourceAlpha"
          operator="atop"
        />
      </filter>
    </defs>
  </svg>
</div>
`;

exports[`components/Image prop "testID" 1`] = `
<div
  class="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
  data-testid="testID"
/>
`;
